src/Landing/scss/style.scoped.css
/* ... */
h1,
.h1 {
    font-size: 38px;
    line-height: 48px;
    letter-spacing: -0.1px
}

@media (min-width: 641px) {
    h1,
    .h1 {
        font-size: 44px;
        line-height: 54px;
        letter-spacing: 0px
    }
}

h2,
.h2 {
    font-size: 32px;
    line-height: 42px;
    letter-spacing: -0.1px
}

@media (min-width: 641px) {
    h2,
    .h2 {
        font-size: 38px;
        line-height: 48px;
        letter-spacing: -0.1px
    }
}

h3,
.h3,
blockquote {
    font-size: 24px;
    line-height: 34px;
    letter-spacing: -0.1px
}

h4,
h5,
h6,
.h4,
.h5,
.h6 {
    font-size: 20px;
    line-height: 30px;
    letter-spacing: -0.1px
}

@media (max-width: 640px) {
    .h1-mobile {
        font-size: 38px;
        line-height: 48px;
        letter-spacing: -0.1px
    }
    .h2-mobile {
        font-size: 32px;
        line-height: 42px;
        letter-spacing: -0.1px
    }
    .h3-mobile {
        font-size: 24px;
        line-height: 34px;
        letter-spacing: -0.1px
    }
    .h4-mobile,
    .h5-mobile,
    .h6-mobile {
        font-size: 20px;
        line-height: 30px;
        letter-spacing: -0.1px
    }
}

.text-light {
    color: #8595AE
}

.text-light a {
    color: #8595AE
}

.text-light h1,
.text-light h2,
.text-light h3,
.text-light h4,
.text-light h5,
.text-light h6,
.text-light .h1,
.text-light .h2,
.text-light .h3,
.text-light .h4,
.text-light .h5,
.text-light .h6 {
    color: #fff !important
}

.text-sm {
    font-size: 18px;
    line-height: 27px;
    letter-spacing: -0.1px
}

.text-xs {
    font-size: 16px;
    line-height: 24px;
    letter-spacing: -0.1px
}

h1,
h2,
.h1,
.h2 {
    margin-top: 48px;
    margin-bottom: 16px
}

h3,
.h3 {
    margin-top: 36px;
    margin-bottom: 12px
}

h4,
h5,
h6,
.h4,
.h5,
.h6 {
    margin-top: 24px;
    margin-bottom: 4px
}

p {
    margin-top: 0;
    margin-bottom: 24px
}

dfn,
cite,
em,
i {
    font-style: italic
}

blockquote {
    color: #6B7A90;
    font-style: italic;
    margin-top: 24px;
    margin-bottom: 24px;
    margin-left: 24px
}

blockquote::before {
    content: "\201C"
}

blockquote::after {
    content: "\201D"
}

blockquote p {
    display: inline
}

address {
    color: #6B7A90;
    border-width: 1px 0;
    border-style: solid;
    border-color: #E9EDF3;
    padding: 24px 0;
    margin: 0 0 24px
}

pre,
pre h1,
pre h2,
pre h3,
pre h4,
pre h5,
pre h6,
pre .h1,
pre .h2,
pre .h3,
pre .h4,
pre .h5,
pre .h6 {
    font-family: "Courier 10 Pitch", Courier, monospace
}

pre,
code,
kbd,
tt,
var {
    background: #F8F9FB
}

pre {
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 1.6em;
    max-width: 100%;
    overflow: auto;
    padding: 24px;
    margin-top: 24px;
    margin-bottom: 24px
}

code,
kbd,
tt,
var {
    font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
    font-size: 16px;
    padding: 2px 4px
}

abbr,
acronym {
    cursor: help
}

mark,
ins {
    text-decoration: none
}

small {
    font-size: 18px;
    line-height: 27px;
    letter-spacing: -0.1px
}

b,
strong {
    font-weight: 600
}

button,
input,
select,
textarea,
label {
    font-size: 20px;
    line-height: 30px
}

.container,
.container-sm {
    width: 100%;
    margin: 0 auto;
    padding-left: 16px;
    padding-right: 16px
}

@media (min-width: 481px) {
    .container,
    .container-sm {
        padding-left: 24px;
        padding-right: 24px
    }
}

.container {
    max-width: 1128px
}

.container-sm {
    max-width: 848px
}

.container .container-sm {
    max-width: 800px;
    padding-left: 0;
    padding-right: 0
}

.screen-reader-text {
    clip: rect(1px, 1px, 1px, 1px);
    position: absolute !important;
    height: 1px;
    width: 1px;
    overflow: hidden;
    word-wrap: normal !important
}

.screen-reader-text:focus {
    border-radius: 2px;
    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
    clip: auto !important;
    display: block;
    font-family: "IBM Plex Sans", sans-serif;
    font-size: 14px;
    letter-spacing: 0px;
    font-weight: 600;
    line-height: 16px;
    text-decoration: none;
    text-transform: uppercase;
    background-color: #fff;
    color: #535FD7 !important;
    border: none;
    height: auto;
    left: 8px;
    padding: 16px 32px;
    top: 8px;
    width: auto;
    z-index: 100000
}

.list-reset {
    list-style: none;
    padding: 0
}

.text-left {
    text-align: left
}

.text-center {
    text-align: center
}

.text-right {
    text-align: right
}

.text-primary {
    color: #535FD7
}

.text-secondary {
    color: #61EFFD
}

.has-top-divider {
    position: relative
}

.has-top-divider::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    display: block;
    height: 1px;
    background: #E9EDF3
}

.has-bottom-divider {
    position: relative
}

.has-bottom-divider::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    display: block;
    height: 1px;
    background: #E9EDF3
}

.m-0 {
    margin: 0
}

.mt-0 {
    margin-top: 0
}

.mr-0 {
    margin-right: 0
}

.mb-0 {
    margin-bottom: 0
}

.ml-0 {
    margin-left: 0
}

.m-8 {
    margin: 8px
}

.mt-8 {
    margin-top: 8px
}

.mr-8 {
    margin-right: 8px
}

.mb-8 {
    margin-bottom: 8px
}

.ml-8 {
    margin-left: 8px
}

.m-16 {
    margin: 16px
}

.mt-16 {
    margin-top: 16px
}

.mr-16 {
    margin-right: 16px
}

.mb-16 {
    margin-bottom: 16px
}

.ml-16 {
    margin-left: 16px
}

.m-24 {
    margin: 24px
}

.mt-24 {
    margin-top: 24px
}

.mr-24 {
    margin-right: 24px
}

.mb-24 {
    margin-bottom: 24px
}

.ml-24 {
    margin-left: 24px
}

.m-32 {
    margin: 32px
}

.mt-32 {
    margin-top: 32px
}

.mr-32 {
    margin-right: 32px
}

.mb-32 {
    margin-bottom: 32px
}

.ml-32 {
    margin-left: 32px
}

.m-40 {
    margin: 40px
}

.mt-40 {
    margin-top: 40px
}

.mr-40 {
    margin-right: 40px
}

.mb-40 {
    margin-bottom: 40px
}

.ml-40 {
    margin-left: 40px
}

.m-48 {
    margin: 48px
}

.mt-48 {
    margin-top: 48px
}
/* ... */

